--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="lib/css/bootstrap.min.css">
-    <link rel="stylesheet" href="lib/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="lib/css/style.css">
-    <link rel="stylesheet" href="lib/css/menu-bar.css">
-    <link rel="stylesheet" href="lib/css/postit-buttons.css">
+    <link rel="stylesheet" href="dist/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="dist/bootstrap/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="dist/style.css">
     <title>PostIt</title>
 </head>
 
@@ -48,13 +46,16 @@
     </section>
 
     <!-- JavaScript -->
-    <script type="text/javascript" src="lib/js/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="lib/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="lib/js/postit-controller.js"></script>
-    <script type="text/javascript" src="lib/js/button.js"></script>
-    <script type="text/javascript" src="lib/js/postit.js"></script>
-    <script type="text/javascript" src="lib/js/change-layout.js"></script>
-    <script type="text/javascript" src="lib/js/postit-factory.js"></script>
-    <script type="text/javascript" src="lib/js/colorize.js"></script>
+    <!--
+    <script type="text/javascript" src="src/js/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="src/js/bootstrap-3.3.7.js"></script>
+    <script type="text/javascript" src="src/js/postit-controller.js"></script>
+    <script type="text/javascript" src="src/js/button.js"></script>
+    <script type="text/javascript" src="src/js/postit.js"></script>
+    <script type="text/javascript" src="src/js/change-layout.js"></script>
+    <script type="text/javascript" src="src/js/postit-factory.js"></script>
+    <script type="text/javascript" src="src/js/colorize.js"></script>
+    -->
+    <script type="text/javascript" src="dist/script.js"></script>
 </body>
 </html>
